fix spacing on tag input

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -201,6 +201,7 @@ main {
     #tag-container {
       position: relative;
       margin: auto;
+      margin-bottom: 15px;
     }
     #waypoints {
         text-align: left;
